k8s/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: transcode
  labels:
    name: transcode
    environment: production
